# s26-06642

./: .gitignore  CLAUDE.md  Makefile  README.org  pyproject.toml
.github/workflows/: build-book.yml
dsmles/: _config.yml  _toc.yml  characters.md  execution-statistics.md  intro.md  reference-sheet.md  references.bib  story-arc-brainstorm.md  story-drafts.md  summary.md  syllabus.ipynb
dsmles/00-introduction/: introduction.ipynb
dsmles/01-numpy/: numpy.ipynb  reactor_data.csv
dsmles/02-pandas-intro/: experiments.csv  experiments_processed.csv  pandas-intro.ipynb
dsmles/03-intermediate-pandas/: intermediate-pandas.ipynb
dsmles/04-dimensionality-reduction/: dimensionality-reduction.ipynb
dsmles/04-feature-engineering/: feature-engineering.ipynb
dsmles/05-dimensionality-reduction/: dimensionality-reduction.ipynb
dsmles/06-linear-regression/: linear-regression.ipynb
dsmles/07-classification/: classification.ipynb
dsmles/07-nonlinear-methods/: nonlinear-methods.ipynb
dsmles/08-ensemble-methods/: ensemble-methods.ipynb
dsmles/08-regularization-model-selection/: regularization-model-selection.ipynb
dsmles/09-clustering/: clustering.ipynb
dsmles/09-nonlinear-methods/: neural-networks-hyperparameter-tuning.ipynb  nonlinear-methods.ipynb
dsmles/10-ensemble-methods/: ensemble-methods.ipynb
dsmles/11-clustering/: clustering.ipynb
dsmles/11-model-interpretability/: model-interpretability.ipynb
dsmles/12-uncertainty-quantification/: uncertainty-quantification.ipynb
dsmles/13-model-interpretability/: model-interpretability.ipynb
dsmles/assignments/: hw01-numpy-pandas.ipynb  hw01-numpy.ipynb  hw02-pandas-intro.ipynb  hw03-intermediate-pandas.ipynb  hw04-feature-engineering.ipynb  hw04-linear-regression.ipynb  hw05-dimensionality-reduction.ipynb  hw06-linear-regression.ipynb  hw07-classification.ipynb  hw07-ensemble-methods.ipynb  hw08-regularization.ipynb  hw09-nonlinear-methods.ipynb  hw10-ensemble-methods.ipynb  hw11-clustering.ipynb  hw12-uncertainty-quantification.ipynb  hw13-model-interpretability.ipynb  index.md  project-checkin.ipynb  project-presentation.ipynb  project-proposal.ipynb  project-report.ipynb  project.ipynb
dsmles/data/: arrhenius_data.csv  catalyst_activity.csv  catalyst_characterization.csv  catalyst_experiments.csv  catalyst_experiments.txt  catalyst_info.csv  ensemble_process.csv  enzyme_kinetics.csv  experiments_intermediate.csv  feature_selection_data.csv  generate_assignment_datasets.py  generate_datasets.py  gp_training.csv  hw01_temperature_data.csv  hw02_experiments.csv  hw03_batch_data.csv  hw03_reactor_specs.csv  hw04_catalyst_data.csv  hw04_kinetics_data.csv  hw04_process_data.csv  hw05_catalyst_properties.csv  hw05_spectroscopic_data.csv  hw06_multiple_regression.csv  hw06_simple_regression.csv  hw07_catalyst_classification.csv  hw07_qc_classification.csv  hw08_polynomial.csv  hw08_sparse_features.csv  (+21 more)
dsmles/data-academy-honors/: README.md  badges.md  ranks.md  tracking.json
(+55 files in other folders)
